apps/production/media/sonarr/stateful-set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sonarr
spec:
  serviceName: sonarr
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
        - name: sonarr
          image: artifactory.local.hejsan.xyz/docker/linuxserver/sonarr:4.0.12@sha256:ca71add37a9cdbb914c7bd5b06f98bf5d2062848c8de6ac3ee09e69a4c170b27
          ports:
            - containerPort: 8989
              name: http
          volumeMounts:
            - name: sonarr-config-pvc
              mountPath: /config
            - name: shared-storage
              mountPath: /mnt/storage
          resources:
            limits:
              memory: 1000Mi
              cpu: "1"
            requests:
              memory: 250Mi
              cpu: "0.1"
      volumes:
        - name: shared-storage
          persistentVolumeClaim:
            claimName: shared-nfs-pvc
  volumeClaimTemplates:
    - metadata:
        name: sonarr-config-pvc
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: longhorn
        resources:
          requests:
            storage: 10Gi
