apps/production/media/sonarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
spec:
  selector:
    app: radarr
  ports:
    - name: http
      targetPort: 8989
      port: 8989
